org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/form/fields/smartfield/SmartField.css
.smart-field {

  & input {
    .text-field-with-icon(@icon-search);
  }

  /* Multiline SmartField */
  & .multiline {
    border-bottom-color:  @palette-light-gray-5;
    border-top-left-radius: @border-radius;
    border-top-right-radius: @border-radius;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
    width: 100%;
    padding-left: 10px;
    height: 28px;
  }

  & .multiline-field {
    background-color: @control-background-color;
    border:solid 1px @border-color;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    border-bottom-right-radius: @border-radius;
    border-bottom-left-radius: @border-radius;
    border-top: none;
    padding: 3px 10px;
  }

   & input.multiline ~ .icon {
    margin-right: -15px;
    top: 0;
  }
}

.smart-field-popup {
  position: absolute;
  border: solid 1px @popup-border-color;
  border-radius:  @border-radius;
  z-index: 101;
  margin-top: 5px;
  background-color: white;
  .drop-shadow();

  & > .options {
    position: absolute;
    overflow: hidden;

    & p {
      position: relative;
      border-bottom: solid 1px @border-color;
      padding: 5px 0 7px 10px;
      margin: 0;
      cursor: pointer;

      &.selected {
        background-color: @selection-background-color;
        border-bottom-color: @selection-border-color;

        &:before {
          width: 100%;
          height: 100%;
          display: block;
          content: ' ';
          position: absolute;
          border-top: solid 1px @selection-border-color;
          top: -1px;
          left: 0;
        }
      }

      &:hover {
        color: @hover-color;
      }
    }
  }

  & > .status {
    background-color: @color-bench-light;
    border-top: solid 1px @color-bench-light-border;
    position: absolute;
    bottom: 0;
    width: 100%;
    padding: 5px 0 7px 10px;
  }
}

